chore: update openapi metadata
